@@ -6,7 +6,7 @@
 
 class player_list_screen {
 public:
-  player_list_screen(int screen_w, int screen_h, std::string file_name);
+  player_list_screen(int screen_w, int screen_h, registration &data_ref);
 
   // Trata eventos (mouse) e avança/página ou retorna ao menu
   void handle_event(const ALLEGRO_EVENT &ev);
@@ -15,7 +15,7 @@ public:
   void draw(ALLEGRO_FONT *font);
 
   // Indica se deve voltar ao menu principal
-  bool go_to_main_menu() const { return go_to_menu; }
+  bool go_to_main_menu() const;
 
   // Reseta estado (página, flag)
   void reset();
@@ -29,7 +29,7 @@ private:
   button back_button;
   button main_menu_button;
 
-  registration data;
+  registration &data;
   std::vector<player> players;
 
   bool go_to_menu;
